--- a/packages/apps/spaces/.eslintrc.json
+++ b/packages/apps/spaces/.eslintrc.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/prefer-ts-expect-error": "warn",
     "prettier/prettier": "warn",
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": ["error", { "allow": ["warn", "error", "info"] }],
     "react/display-name": "off",
     "react-hooks/exhaustive-deps": "off",
     "@stylistic/js/padding-line-between-statements": [
