--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -82,6 +82,8 @@
     "linkifyjs": "^4.1.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "next": "13.5.6",
     "next-auth": "4.24.5",
     "next-pwa": "^5.6.0",
