--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -88,8 +88,9 @@
     "next-pwa": "^5.6.0",
     "phoenix": "^1.7.11",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-date-picker": "^10.0.3",
-    "react-datepicker": "^6.1.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-filepond": "^7.1.2",
