--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -83,7 +83,7 @@
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "mobx": "^6.12.3",
-    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
     "next": "13.5.6",
     "next-auth": "4.24.5",
     "next-pwa": "^5.6.0",
@@ -105,6 +105,7 @@
     "react-toastify": "^9.1.1",
     "react-virtuoso": "4.5.1",
     "recoil": "^0.7.6",
+    "recursive-diff": "^1.0.9",
     "remirror": "^2.0.36",
     "rooks": "^7.14.1",
     "rxjs": "^7.8.1",
