--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@growthbook/growthbook-react": "^0.21.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@highlight-run/next": "^7.4.0",
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
