--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -28,6 +28,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@growthbook/growthbook-react": "^0.21.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@highlight-run/next": "^7.4.0",
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
@@ -82,6 +83,8 @@
     "linkifyjs": "^4.1.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
+    "mobx": "^6.12.3",
+    "mobx-react-lite": "^4.0.7",
     "next": "13.5.6",
     "next-auth": "4.24.5",
     "next-pwa": "^5.6.0",
@@ -103,6 +106,7 @@
     "react-toastify": "^9.1.1",
     "react-virtuoso": "4.5.1",
     "recoil": "^0.7.6",
+    "recursive-diff": "^1.0.9",
     "remirror": "^2.0.36",
     "rooks": "^7.14.1",
     "rxjs": "^7.8.1",
