--- a/packages/server/customer_os_realtime/Dockerfile
+++ b/packages/server/customer_os_realtime/Dockerfile
@@ -63,7 +63,7 @@ COPY config/runtime.exs config/
 COPY rel rel
 RUN mix release
 
-# start a new build stage so that the final image will only contain
+# start a components build stage so that the final image will only contain
 # the compiled release and other runtime necessities
 FROM ${RUNNER_IMAGE}
 
