--- a/packages/apps/frontera/package.json
+++ b/packages/apps/frontera/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-table": "^8.16.0",
     "@tanstack/react-virtual": "^3.4.0",
@@ -73,7 +74,7 @@
     "slack-to-html": "^1.0.0",
     "ts-pattern": "^5.1.1",
     "usehooks-ts": "^3.1.0",
-    "utf-8-validate": "^6.0.3"
+    "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
@@ -86,12 +87,12 @@
     "@types/d3": "^7.4.3",
     "@types/html-to-text": "^9.0.0",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/node": "18.0.0",
+    "@types/phoenix": "^1.6.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-lottie": "^1.2.10",
     "@types/sanitize-html": "^2.8.0",
-    "@types/node": "17.0.4",
-    "@types/phoenix": "^1.6.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
