Slack notification on tenant registration

--- a/packages/server/user-admin-api/.env
+++ b/packages/server/user-admin-api/.env
@@ -32,6 +32,7 @@ GOOGLE_OAUTH_CLIENT_SECRET=*GET FROM 1PASS*
 
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
+SLACK_NOTIFY_NEW_TENANT_REGISTERED_WEBHOOK=
 
 # valid log values (PANIC, FATAL, ERROR, WARN, INFO, DEBUG)
 LOGGER_LEVEL: DEBUG
