--- a/packages/runner/customer-os-dedup/.env
+++ b/packages/runner/customer-os-dedup/.env
@@ -38,5 +38,5 @@ CUSTOMER_OS_ADMIN_API_KEY: 13604691-6850-4f08-a568-d995fb57b4f3
 ANTHROPIC_API: API_HERE
 ANTHROPIC_API_KEY: KEY_HERE
 
-OPENAI_API: API_HERE
-OPENAI_API_KEY: KEY_HERE
+AI_API_PATH: http://localhost:10101
+AI_API_KEY: b155a222-2a0b-11ee-be56-0242ac120002
