--- a/packages/server/ai-api/.env
+++ b/packages/server/ai-api/.env
@@ -15,3 +15,6 @@ PORT: 10101
 
 OPENAI_API_PATH: https://api.openai.com/v1/chat/completions
 OPENAI_API_KEY:
+
+ANTHROPIC_API_PATH: https://api.anthropic.com/v1/complete
+ANTHROPIC_API_KEY:
