--- a/packages/server/events-processing-platform-subscribers/.env
+++ b/packages/server/events-processing-platform-subscribers/.env
@@ -59,8 +59,8 @@ EVENTS_PROCESSING_PLATFORM_API_KEY=082c1193-a5a2-42fc-87fc-e960e692fffd
 
 SCRAPING_BEE_API_KEY: SOME_API_KEY
 SCRAPING_DOG_API_KEY: SOME_API_KEY
-OPENAI_API_PATH: https://openai.openline.ai
-OPENAI_API_KEY: SOME_API_KEY
+AI_API_PATH: http://localhost:10101
+AI_API_KEY: b155a222-2a0b-11ee-be56-0242ac120002
 PROMPT_JSON_SCHEMA: '{
 		"$schema": "http://json-schema.org/draft-07/schema#",
 		"type": "object",
@@ -115,9 +115,6 @@ SCRAPE_DATA_PROMPT:' The following is data scraped from a website:  Please combi
                       If you do not have data for a given key, do not return it as part of the JSON object.
 
                       Ensure before you output that your response is valid JSON.  If it is not valid JSON, do your best to fix the formatting to align to valid JSON.'
-
-ANTHROPIC_API: https://anthropic.openline.ai
-ANTHROPIC_API_KEY: SOME_API_KEY
 
 TEMPORAL_HOSTPORT: localhost:7233
 TEMPORAL_NAMESPACE: default
