User-Admin-API - Add tracing

--- a/packages/server/user-admin-api/.env
+++ b/packages/server/user-admin-api/.env
@@ -38,3 +38,11 @@ SLACK_NOTIFY_NEW_TENANT_REGISTERED_WEBHOOK=
 LOGGER_LEVEL: DEBUG
 LOGGER_DEV_MODE: true
 LOGGER_ENCODER: console
+
+JAEGER_ENABLED: true
+JAEGER_SERVICE_NAME: user-admin-api
+JAEGER_AGENT_HOST: localhost
+JAEGER_AGENT_PORT: 6831
+JAEGER_SAMPLER_TYPE: const
+JAEGER_SAMPLER_PARAM: 1
+JAEGER_REPORTER_LOG_SPANS: true
