--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -12,6 +12,16 @@ volumes:
 
 services:
 
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "6831:6831/udp"
+    environment:
+      - LOG_LEVEL=debug
+    networks:
+      - openline
+
   postgres:
     image: postgres:14.5
     container_name: postgres
