--- a/packages/server/validation-api/.env
+++ b/packages/server/validation-api/.env
@@ -6,6 +6,9 @@ REACHER_SECRET:
 SMARTY_AUTH_ID:
 SMARTY_AUTH_TOKEN:
 
+HUNTER_IO_API_KEY:
+HUNTER_IO_API_PATH:https://api.hunter.io/v2/email-finder
+
 POSTGRES_USER: postgres
 POSTGRES_PASSWORD: password
 POSTGRES_DB: openline
@@ -23,3 +26,11 @@ NEO4J_AUTH_REALM:
 NEO4J_MAX_CONN_POOL_SIZE: 200
 NEO4J_CONN_ACQUISITION_TIMEOUT_SEC: 60
 NEO4J_LOG_LEVEL: INFO
+
+JAEGER_ENABLED: true
+JAEGER_SERVICE_NAME: validation-api
+JAEGER_AGENT_HOST: localhost
+JAEGER_AGENT_PORT: 6831
+JAEGER_SAMPLER_TYPE: probabilistic
+JAEGER_SAMPLER_PARAM: 1
+JAEGER_REPORTER_LOG_SPANS: false
