--- a/packages/server/comms-api/.env
+++ b/packages/server/comms-api/.env
@@ -7,9 +7,8 @@ POSTGRES_MAX_CONN: 25
 POSTGRES_MAX_IDLE_CONN: 10
 POSTGRES_CONN_MAX_LIFETIME: 0
 
-COMMS_API_CORS_URL=http://localhost:3000 http://localhost:3001
+COMMS_API_PUBLIC_PATH=:http://localhost:8013
 COMMS_API_SERVER_ADDRESS=:8013
-COMMS_GRPC_PORT=9013
 
 COMMS_API_MAIL_API_KEY=4537b6d3-915c-4050-badb-f2514a618474
 
@@ -18,15 +17,6 @@ CUSTOMER_OS_API_KEY: dd9d2474-b4a9-4799-b96f-73cd0a2917e4
 
 FILE_STORE_API: http://localhost:10001
 FILE_STORE_API_KEY: 9eb87aa2-75e7-45b2-a1e6-53ed297d0ba8
-
-NEXT_PUBLIC_WEBSOCKET_PATH=ws://127.0.0.1:8013/
-
-OASIS_API_URL=localhost:9006
-WEBCHAT_API_KEY=nobody-will-guess-this-api-key
-WEBRTC_AUTH_SECRET=2c42a1b6-d776-4083-b0b6-44fecea2d022
-WEBRTC_AUTH_TTL=3600
-WEBSOCKET_PING_INTERVAL=5
-COMMS_API_VCON_API_KEY=92c04073-17c3-4e91-8326-516bbd0750a4
 
 GOOGLE_OAUTH_CLIENT_ID:
 GOOGLE_OAUTH_CLIENT_SECRET:
