Fix comms-api props

--- a/packages/server/comms-api/.env
+++ b/packages/server/comms-api/.env
@@ -7,8 +7,8 @@ POSTGRES_MAX_CONN: 25
 POSTGRES_MAX_IDLE_CONN: 10
 POSTGRES_CONN_MAX_LIFETIME: 0
 
-COMMS_API_PUBLIC_PATH=:http://localhost:8013
-COMMS_API_SERVER_ADDRESS=:8013
+COMMS_API_PUBLIC_PATH: http://localhost:8013
+PORT: 8013
 
 COMMS_API_MAIL_API_KEY=4537b6d3-915c-4050-badb-f2514a618474
 
