--- a/packages/apps/frontera/package.json
+++ b/packages/apps/frontera/package.json
@@ -8,7 +8,12 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "middleware": "env-cmd -f .env.production node ./middleware.js"
+    "middleware": "env-cmd -f .env.production node ./middleware.js",
+    "fix:lint": "eslint '**/*.{js,ts,jsx,tsx}' --fix",
+    "postinstall": "node scripts/setup-precommit-hook",
+    "codegen:graphql": "graphql-codegen --require dotenv/config --config scripts/codegen-graphql.ts",
+    "codegen:icons": "node scripts/codegen-icons.js",
+    "codegen:logos": "node scripts/codegen-logos.js"
   },
   "dependencies": {
     "@date-fns/utc": "^1.2.0",
