--- a/packages/apps/frontera/package.json
+++ b/packages/apps/frontera/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "middleware": "env-cmd -f .env.production node ./middleware.js",
     "fix:lint": "eslint '**/*.{js,ts,jsx,tsx}' --fix",
-    "postinstall": "node scripts/setup-precommit-hook",
+    "postinstall": "node scripts/setup-precommit-hook.cjs",
     "codegen:graphql": "graphql-codegen --require dotenv/config --config scripts/codegen-graphql.ts",
     "codegen:icons": "node scripts/codegen-icons.js",
     "codegen:logos": "node scripts/codegen-logos.js"
