--- a/packages/server/customer-os-api/.env
+++ b/packages/server/customer-os-api/.env
@@ -42,3 +42,6 @@ JAEGER_AGENT_PORT: 6831
 JAEGER_SAMPLER_TYPE: const
 JAEGER_SAMPLER_PARAM: 1
 JAEGER_REPORTER_LOG_SPANS: false
+
+VALIDATION_API: http://localhost:10003
+VALIDATION_API_KEY: c41192c4-08bc-4b4e-851c-10fc876b9ebb
