--- a/packages/server/comms-api/.env
+++ b/packages/server/comms-api/.env
@@ -7,6 +7,15 @@ POSTGRES_MAX_CONN: 25
 POSTGRES_MAX_IDLE_CONN: 10
 POSTGRES_CONN_MAX_LIFETIME: 0
 
+NEO4J_TARGET: neo4j://127.0.0.1:7687
+NEO4J_AUTH_USER: neo4j
+NEO4J_AUTH_PWD: password
+NEO4J_AUTH_REALM:
+NEO4J_MAX_CONN_POOL_SIZE: 100
+NEO4J_CONN_ACQUISITION_TIMEOUT_SEC: 60
+# valid log values (ERROR, WARNING, INFO, DEBUG)
+NEO4J_LOG_LEVEL: INFO
+
 COMMS_API_PUBLIC_PATH: http://localhost:8013
 PORT: 8013
 
