--- a/packages/apps/frontera/Dockerfile
+++ b/packages/apps/frontera/Dockerfile
@@ -1,10 +1,11 @@
 FROM node:18-alpine
+ENV CI=true
 
 WORKDIR /app
 
 COPY package.json .
 
-RUN npm install
+RUN npm install --ignore-scripts
 
 COPY . .
 
