--- a/.github/workflows/build-frontera-dev.yml
+++ b/.github/workflows/build-frontera-dev.yml
@@ -15,15 +15,16 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  FRONTERA_IMAGE_NAME: ${{ github.repository }}/frontera-dev
-  MIDDLEWARE_IMAGE_NAME: ${{ github.repository }}/middleware-dev
+  FRONTERA_DEV_IMAGE_NAME: ${{ github.repository }}/frontera-dev
+  FRONTERA_PROD_IMAGE_NAME: ${{ github.repository }}/frontera-prod
+  MIDDLEWARE_IMAGE_NAME: ${{ github.repository }}/middleware
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  build-publish-frontera:
+  build-frontera-dev:
     runs-on: ubuntu-latest
     steps:
       - name: Delete huge unnecessary tools folder
@@ -48,7 +49,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5.5.1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.FRONTERA_IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.FRONTERA_DEV_IMAGE_NAME }}
 
       - name: Push Docker image
         uses: docker/build-push-action@v5.3.0
@@ -66,7 +67,50 @@ jobs:
             "VITE_NOTIFICATION_PROD_APP_IDENTIFIER=${{ secrets.NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER }}"
             "VITE_NOTIFICATION_URL=${{ secrets.NEXT_PUBLIC_NOTIFICATION_URL }}"
 
-  build-publish-middleware:
+  build-frontera-prod:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Delete huge unnecessary tools folder
+        run: rm -rf /opt/hostedtoolcache
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          cache: "npm"
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3.1.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.REPOSITORY_READ_WRITE_USERNAME }}
+          password: ${{ secrets.REPOSITORY_READ_WRITE_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.5.1
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.FRONTERA_PROD_IMAGE_NAME }}
+
+      - name: Push Docker image
+        uses: docker/build-push-action@v5.3.0
+        with:
+          context: packages/apps/frontera/
+          push: ${{ github.ref_name == 'otter' || github.event_name == 'release' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            "VITE_MIDDLEWARE_API_URL=${{ secrets.PROD_VITE_MIDDLEWARE_API_URL }}"
+            "VITE_CLIENT_APP_URL=${{ secrets.PROD_VITE_CLIENT_APP_URL }}"
+            "VITE_REALTIME_WS_PATH=${{ secrets.PROD_VITE_REALTIME_WS_PATH }}"
+            "VITE_REALTIME_WS_API_KEY=${{ secrets.PROD_VITE_REALTIME_WS_API_KEY }}"
+            "VITE_NOTIFICATION_TEST_APP_IDENTIFIER=${{ secrets.NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER }}"
+            "VITE_NOTIFICATION_PROD_APP_IDENTIFIER=${{ secrets.NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER }}"
+            "VITE_NOTIFICATION_URL=${{ secrets.NEXT_PUBLIC_NOTIFICATION_URL }}"
+
+  build-middleware:
     runs-on: ubuntu-latest
     steps:
       - name: Delete huge unnecessary tools folder
