--- a/packages/apps/frontera/Dockerfile
+++ b/packages/apps/frontera/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:18-alpine
+FROM node:18-alpine@sha256:4837c2ac8998cf172f5892fb45f229c328e4824c43c8506f8ba9c7996d702430 as base
+
+FROM base as builder
 ENV CI=true
 
 WORKDIR /app
@@ -11,8 +13,8 @@ COPY . .
 
 RUN npm run build
 
-RUN rm -rf node_modules
+FROM nginx:latest@sha256:32e76d4f34f80e479964a0fbd4c5b4f6967b5322c8d004e9cf0cb81c93510766 as prod
 
-EXPOSE 4173
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-CMD [ "npm", "run", "preview" ]
+CMD ["nginx", "-g", "daemon off;"]
