build: pass docker arg to internal .env.production

--- a/packages/apps/frontera/Dockerfile
+++ b/packages/apps/frontera/Dockerfile
@@ -1,5 +1,13 @@
 FROM node:18-alpine@sha256:4837c2ac8998cf172f5892fb45f229c328e4824c43c8506f8ba9c7996d702430 as base
 
+ARG VITE_MIDDLEWARE_API_URL
+ARG VITE_CLIENT_APP_URL
+ARG VITE_REALTIME_WS_PATH
+ARG VITE_REALTIME_WS_API_KEY
+ARG VITE_NOTIFICATION_TEST_APP_IDENTIFIER
+ARG VITE_NOTIFICATION_PROD_APP_IDENTIFIER
+ARG VITE_NOTIFICATION_URL
+
 FROM base as builder
 ENV CI=true
 
@@ -11,6 +19,9 @@ COPY package-lock.json .
 RUN npm ci --ignore-scripts
 
 COPY . .
+
+RUN touch .env.production
+RUN printenv > .env.production
 
 RUN npm run build
 
